THRIFT-569. rb: Segmentation Fault when using BinaryProtocolAccelerated in Ruby

This patch checks to make sure that a value is a string before treating it as one. 



git-svn-id: https://svn.apache.org/repos/asf/incubator/thrift/trunk@810689 13f79535-47bb-0310-9956-ffa450edef68